--- a/Challenge_Alura_Latam.ipynb
+++ b/Challenge_Alura_Latam.ipynb
@@ -502,25 +502,21 @@
       "metadata": {
         "id": "xykobSftV64I",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 55
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5389cc99-1fe8-471b-bea2-9b54ec93fdfc"
+        "outputId": "bce49654-d3ea-4943-8b9f-5dfbf5379143"
       },
-      "execution_count": 77,
+      "execution_count": 105,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "\" Esto solo lo use para probar otra forma de ver los resultados de la suma y compararlo con el df hecho en el siguiente codigo\\nprint(f'Tienda 1:, {suma_tienda_1}')\\nprint(f'Tienda 2:, {suma_tienda_2}')\\nprint(f'Tienda 3:, {suma_tienda_3}')\\nprint(f'Tienda 4:, {suma_tienda_4}')\\n\""
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 77
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tienda 1:, 1150880400.0\n",
+            "Tienda 2:, 1116343500.0\n",
+            "Tienda 3:, 1098019600.0\n",
+            "Tienda 4:, 1038375700.0\n"
+          ]
         }
       ]
     },
